--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,22 +1,3 @@
-Skip to content
-Search or jump to…
-
-Pull requests
-Issues
-Marketplace
-Explore
- 
-@richardmachado 
-1
-02.4kcpdis/Sprint-Challenge-Applied-Javascript
-forked from LambdaSchool/Sprint-Challenge-Applied-Javascript
- Code Pull requests 0 Actions Projects 0 Wiki Security Insights
-Sprint-Challenge-Applied-Javascript/CSS/index.css
-@cpdis cpdis Fixed image position issue by adding position: absolute to .current c…
-4758be6 on Sep 8, 2018
-@cpdis@tetondan
-314 lines (313 sloc)  6.17 KB
-  
 .width-100 {
   width: 100%;
 }
@@ -27,25 +8,25 @@ Sprint-Challenge-Applied-Javascript/CSS/index.css
   font-family: 'PT Sans';
   font-style: italic;
   font-weight: 400;
-  src: local('PT Sans Italic'), local('PTSans-Italic'), url(https://fonts.gstatic.com/s/ptsans/v9/jizYRExUiTo99u79D0e0x8mN.ttf) format('truetype');
+  src: local('PT Sans Italic'), local('PTSans-Italic'), url(https://fonts.gstatic.com/s/ptsans/v10/jizYRExUiTo99u79D0e0x8mN.ttf) format('truetype');
 }
 @font-face {
   font-family: 'PT Sans';
   font-style: italic;
   font-weight: 700;
-  src: local('PT Sans Bold Italic'), local('PTSans-BoldItalic'), url(https://fonts.gstatic.com/s/ptsans/v9/jizdRExUiTo99u79D0e8fOydLxUY.ttf) format('truetype');
+  src: local('PT Sans Bold Italic'), local('PTSans-BoldItalic'), url(https://fonts.gstatic.com/s/ptsans/v10/jizdRExUiTo99u79D0e8fOydLxUY.ttf) format('truetype');
 }
 @font-face {
   font-family: 'PT Sans';
   font-style: normal;
   font-weight: 400;
-  src: local('PT Sans'), local('PTSans-Regular'), url(https://fonts.gstatic.com/s/ptsans/v9/jizaRExUiTo99u79D0KEwA.ttf) format('truetype');
+  src: local('PT Sans'), local('PTSans-Regular'), url(https://fonts.gstatic.com/s/ptsans/v10/jizaRExUiTo99u79D0KEwA.ttf) format('truetype');
 }
 @font-face {
   font-family: 'PT Sans';
   font-style: normal;
   font-weight: 700;
-  src: local('PT Sans Bold'), local('PTSans-Bold'), url(https://fonts.gstatic.com/s/ptsans/v9/jizfRExUiTo99u79B_mh0O6tKA.ttf) format('truetype');
+  src: local('PT Sans Bold'), local('PTSans-Bold'), url(https://fonts.gstatic.com/s/ptsans/v10/jizfRExUiTo99u79B_mh0O6tKA.ttf) format('truetype');
 }
 * {
   box-sizing: border-box;
@@ -211,6 +192,7 @@ body {
   letter-spacing: 2px;
   cursor: pointer;
   font-weight: bold;
+  text-transform: uppercase;
 }
 .tabs .topics .tab:hover {
   text-decoration: underline;
@@ -311,34 +293,13 @@ body {
   top: 50%;
   left: 25px;
   transform: translate(0, -50%);
-  z-index: 1;
 }
 .carousel .right-button {
   top: 50%;
   right: 25px;
   transform: translate(0, -50%);
-  z-index: 1;
 }
 .carousel img {
   width: 100%;
-  visibility: hidden;
-  opacity: 0;
+  display: none;
 }
-.carousel .current {
-  position: absolute;
-  visibility: visible;
-  opacity: 1;
-  transition: visibility 0s, opacity 0.5s linear;
-}
-© 2019 GitHub, Inc.
-Terms
-Privacy
-Security
-Status
-Help
-Contact GitHub
-Pricing
-API
-Training
-Blog
-About
